--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   <a class="menu-state" href="#" id="fire-services"></a>
                 </li>
                 <li class="menu">
-                  <a class="menu-state" href="#" id="fire-contact">Criadores</a>
+                  <a class="menu-state" href="http://discord.gg/ZAxSkZqndP" id="fire-contact">Criadores</a>
                 </li>
                 <li class="menu credits">
                   <a href="#"></a>
