--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                     id="fire-home">Discord</a>
                 </li>
                 <li class="menu">
-                  <a class="menu-state" href="#" id="fire-services"></a>
+                  <a class="menu-state" href="http://discord.gg/ZAxSkZqndP" id="fire-services"></a>
                 </li>
                 <li class="menu">
-                  <a class="menu-state" href="http://discord.gg/ZAxSkZqndP" id="fire-contact">Criadores</a>
+                  <a class="menu-state" href="#" id="fire-contact">Criadores</a>
                 </li>
                 <li class="menu credits">
                   <a href="#"></a>
