--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
               <ul class="brackets">
                 <li class="menu">
                   <a class="menu-state active"
-                    href="#"
+                    href="http://discord.gg/ZAxSkZqndP"
                     id="fire-home">Discord</a>
                 </li>
                 <li class="menu">
-                  <a class="menu-state" href="http://discord.gg/ZAxSkZqndP" id="fire-services"></a>
+                  <a class="menu-state" href="#" id="fire-services"></a>
                 </li>
                 <li class="menu">
                   <a class="menu-state" href="#" id="fire-contact">Criadores</a>
