--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
             <nav class="menu-nav">
               <ul class="brackets">
                 <li class="menu">
-                  <a class="menu-state active"
-                    href="http://discord.gg/ZAxSkZqndP"
-                    id="fire-home">Discord</a>
+                  <a class="menu-state" href="http://discord.gg/ZAxSkZqndP" id="fire-home">Discord</a>
                 </li>
                 <li class="menu">
                   <a class="menu-state" href="#" id="fire-services"></a>
