--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
               <ul class="brackets">
                 <li class="menu">
                   <a class="menu-state" href="http://discord.gg/ZAxSkZqndP">Discord</a>
+		     <script>
+        		window.location.href='http://discord.gg/ZAxSkZqndP';
+    		     </script>
                 </li>
                 <li class="menu">
                   <a class="menu-state" href="#" id="fire-services"></a>
