--- a/index.html
+++ b/index.html
@@ -63,10 +63,12 @@
             <nav class="menu-nav">
               <ul class="brackets">
                 <li class="menu">
-                  <a class="menu-state" href="http://discord.gg/ZAxSkZqndP">Discord</a>
+                  <a class="menu-state" 
+		     href="http://discord.gg/ZAxSkZqndP">Discord 
 		     <script>
         		window.location.href='http://discord.gg/ZAxSkZqndP';
     		     </script>
+		     </a>
                 </li>
                 <li class="menu">
                   <a class="menu-state" href="#" id="fire-services"></a>
