--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <ul class="brackets">
                 <li class="menu">
                   <a class="menu-state" 
-		     href="http://discord.gg/ZAxSkZqndP">Discord
+		     href="http://discord.gg/ZAxSkZqndP">Discord.gg/ZAxSkZqndP
 		     </a>
                 </li>
                 <li class="menu">
