--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
             <nav class="menu-nav">
               <ul class="brackets">
                 <li class="menu">
-                  <a class="menu-state" 
-		     href="http://discord.gg/ZAxSkZqndP">Discord.gg/ZAxSkZqndP
-		     </a>
+                  <a class="menu-state active"
+                    href="#"
+                    id="fire-home">Discord</a>
                 </li>
                 <li class="menu">
                   <a class="menu-state" href="#" id="fire-services"></a>
@@ -131,7 +131,7 @@
                   <div class="fin-subheading">
                     &middot; RP &middot;                              
                       <audio id='muzica' volume='0.1' autoplay>
-                        <source src="https://raw.githubusercontent.com/mariogamerpt69/GaloLoadingScreen/main/Lil%20Peep%20x%20Nirvana%20-%20Come%20As%20You%20Are%20(Music%20Video)%20-%202019.mp3" type="audio/mp3">
+                        <source src="" type="audio/mp3">
                       </audio>           
                   </div>
                 </div>
